fix: spacing

--- a/src/components/FeatureTile/feature-tile.scss
+++ b/src/components/FeatureTile/feature-tile.scss
@@ -96,7 +96,7 @@ a.feature-tile:hover .feature-tile__info {
   }
 }
 
-.feature-tile--developers {
+div.feature-tile--developers {
   margin-bottom: $spacing-05;
 }
 
